{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 884,
  "lineage": "b3e64b2a-cc0d-c2f1-6c81-a420c6ac1afb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bf779ae63bbe9ba",
            "arn": "arn:aws:ec2:us-west-2:162590743500:elastic-ip/eipalloc-09bf779ae63bbe9ba",
            "domain": "vpc",
            "id": "eipalloc-09bf779ae63bbe9ba",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-188-55-225.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.55.225",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "nat-gateway-eip-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "nat-gateway-eip-jenkins"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f845fe6588c34e96",
            "arn": "arn:aws:ec2:us-west-2:162590743500:instance/i-04c18d79fba8ccfea",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c18d79fba8ccfea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00b253c7aa18d201a"
              }
            ],
            "primary_network_interface_id": "eni-00b253c7aa18d201a",
            "private_dns": "ip-10-0-0-246.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.246",
            "public_dns": "ec2-54-188-105-125.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.105.125",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f54611eb3dff898f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dec9a4b0f5e12e3b",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "bastion-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "bastion-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04790945be7534e65"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "i-04c18d79fba8ccfea",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public_subnet",
            "aws_vpc.custom",
            "data.aws_ami.bastion",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:internet-gateway/igw-09cbc1588a3afcbe1",
            "id": "igw-09cbc1588a3afcbe1",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "igw-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "igw-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:loadbalancer/app/lb-jenkins/0abd6554aaea8f64",
            "arn_suffix": "app/lb-jenkins/0abd6554aaea8f64",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-jenkins-985501314.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:162590743500:loadbalancer/app/lb-jenkins/0abd6554aaea8f64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-jenkins",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-043cda329af0ce6e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049b75a2cdc29372a"
              },
              {
                "subnet_id": "subnet-0dec9a4b0f5e12e3b"
              }
            ],
            "subnets": [
              "subnet-049b75a2cdc29372a",
              "subnet-0dec9a4b0f5e12e3b"
            ],
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "lb-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "lb-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:loadbalancer/app/lb-jenkins/0abd6554aaea8f64"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public_subnet",
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:listener/app/lb-jenkins/0abd6554aaea8f64/8c94532ef6599caa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:targetgroup/lb-target-group-jenkins/8f2df563af9993c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:162590743500:listener/app/lb-jenkins/0abd6554aaea8f64/8c94532ef6599caa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:loadbalancer/app/lb-jenkins/0abd6554aaea8f64",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:listener/app/lb-jenkins/0abd6554aaea8f64/8c94532ef6599caa"
          },
          "dependencies": [
            "aws_lb.jenkins",
            "aws_lb_target_group.jenkins",
            "aws_security_group.lb",
            "aws_subnet.public_subnet",
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:targetgroup/lb-target-group-jenkins/8f2df563af9993c2",
            "arn_suffix": "targetgroup/lb-target-group-jenkins/8f2df563af9993c2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:162590743500:targetgroup/lb-target-group-jenkins/8f2df563af9993c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group-jenkins",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "lb-target-group-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "lb-target-group-jenkins"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:162590743500:targetgroup/lb-target-group-jenkins/8f2df563af9993c2"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bf779ae63bbe9ba",
            "association_id": "eipassoc-0648109286f6132ff",
            "connectivity_type": "public",
            "id": "nat-0d7c44d73b0b75325",
            "network_interface_id": "eni-01d04f5a088f72ec8",
            "private_ip": "10.0.0.26",
            "public_ip": "54.188.55.225",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dec9a4b0f5e12e3b",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "nat-gateway-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "nat-gateway-jenkins"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:route-table/rtb-03ad2a6f92d0c4463",
            "id": "rtb-03ad2a6f92d0c4463",
            "owner_id": "162590743500",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d7c44d73b0b75325",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "private-route-table-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "private-route-table-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "rtb-03ad2a6f92d0c4463",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:route-table/rtb-02d8d3056bda14293",
            "id": "rtb-02d8d3056bda14293",
            "owner_id": "162590743500",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09cbc1588a3afcbe1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "public-route-table-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "public-route-table-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "rtb-02d8d3056bda14293",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d5e27e53b944cd9",
            "region": "us-west-2",
            "route_table_id": "rtb-03ad2a6f92d0c4463",
            "subnet_id": "subnet-04be0d4aa057628ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0773e8ae13e9b9491",
            "region": "us-west-2",
            "route_table_id": "rtb-03ad2a6f92d0c4463",
            "subnet_id": "subnet-0eab5017d1336af3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd268f849df391ce",
            "region": "us-west-2",
            "route_table_id": "rtb-02d8d3056bda14293",
            "subnet_id": "subnet-0dec9a4b0f5e12e3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a8bad9d6aab8abe",
            "region": "us-west-2",
            "route_table_id": "rtb-02d8d3056bda14293",
            "subnet_id": "subnet-049b75a2cdc29372a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:security-group/sg-04790945be7534e65",
            "description": "Allow tcp/22 from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04790945be7534e65",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.142.220.65/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group-jenkins",
            "name_prefix": "",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "bastion-security-group-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "bastion-security-group-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "sg-04790945be7534e65",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:security-group/sg-0f25e4fa8b562d9b6",
            "description": "Allow tcp/8080 from load balancer and tcp/22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f25e4fa8b562d9b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04790945be7534e65"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043cda329af0ce6e8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-security-group-jenkins",
            "name_prefix": "",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "jenkins-security-group-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "jenkins-security-group-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "sg-0f25e4fa8b562d9b6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.lb",
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:security-group/sg-043cda329af0ce6e8",
            "description": "Allow tcp/80 and tcp/443 from everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043cda329af0ce6e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.142.220.65/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "84.142.220.65/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-security-group-jenkins",
            "name_prefix": "",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "lb-security-group-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "lb-security-group-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "sg-043cda329af0ce6e8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:security-group/sg-0eceaf5e7dd011c97",
            "description": "Allow tcp/22 from bastion and jenkins security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eceaf5e7dd011c97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04790945be7534e65",
                  "sg-0f25e4fa8b562d9b6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker-security-group-jenkins",
            "name_prefix": "",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "worker-security-group-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "worker-security-group-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "sg-0eceaf5e7dd011c97",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_security_group.lb",
            "aws_vpc.custom",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:subnet/subnet-04be0d4aa057628ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04be0d4aa057628ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162590743500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "private-subnet-10.0.1.0/24-us-west-2a-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "private-subnet-10.0.1.0/24-us-west-2a-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "subnet-04be0d4aa057628ff",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:subnet/subnet-0eab5017d1336af3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eab5017d1336af3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162590743500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "private-subnet-10.0.3.0/24-us-west-2b-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "private-subnet-10.0.3.0/24-us-west-2b-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "subnet-0eab5017d1336af3e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:subnet/subnet-0dec9a4b0f5e12e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dec9a4b0f5e12e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162590743500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "public-subnet-10.0.0.0/24-us-west-2a-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "public-subnet-10.0.0.0/24-us-west-2a-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "subnet-0dec9a4b0f5e12e3b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:subnet/subnet-049b75a2cdc29372a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049b75a2cdc29372a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162590743500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "public-subnet-10.0.2.0/24-us-west-2b-jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "public-subnet-10.0.2.0/24-us-west-2b-jenkins"
            },
            "vpc_id": "vpc-0967a488f1632edbd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162590743500",
            "id": "subnet-049b75a2cdc29372a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:162590743500:vpc/vpc-0967a488f1632edbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9022a972d4b296d",
            "default_route_table_id": "rtb-00cc795cffcfaed6a",
            "default_security_group_id": "sg-0c363a630431ba145",
            "dhcp_options_id": "dopt-015ad3ba34bb527d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0967a488f1632edbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cc795cffcfaed6a",
            "owner_id": "162590743500",
            "region": "us-west-2",
            "tags": {
              "Author": "Marcus Hogh",
              "Name": "jenkins"
            },
            "tags_all": {
              "Author": "Marcus Hogh",
              "Name": "jenkins"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}